posting JVM